선택한 카페 정보 보여주기, 좋아하는 카페 등록 구현완료

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,7 @@
         <meta-data android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyAALBViAA1-3A9HNUb_qwUIEamPZ4Hamlg"/>
 
+        <activity android:name=".CafeInfoActivity"/>
     </application>
 
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
